@@ -551,11 +551,11 @@ Triangulation<3> Example<3>::b5() {
     // - SFS [S2: (2,1) (3,1) (16,-13)]
     // - SFS [S2: (2,1) (3,1) (17,-14)]
     return Triangulation<3>::fromGluings(8, {
-        { 0, 0, 1, {0,1,2,3} }, { 0, 1, 2, {0,1,2,3} },
-        { 0, 3, 3, {0,1,2,3} }, { 1, 1, 4, {0,1,2,3} },
-        { 1, 3, 2, {3,0,1,2} }, { 2, 0, 5, {0,1,2,3} },
-        { 2, 3, 6, {0,1,2,3} }, { 3, 0, 6, {2,0,1,3} },
-        { 3, 1, 7, {0,1,2,3} }, { 3, 2, 5, {1,0,3,2} },
+        { 0, 0, 1, {0,1,3,2} }, { 0, 1, 2, {0,1,3,2} },
+        { 0, 3, 3, {0,1,3,2} }, { 1, 1, 4, {0,1,3,2} },
+        { 1, 2, 2, {2,0,3,1} }, { 2, 0, 5, {0,1,3,2} },
+        { 2, 2, 6, {0,1,3,2} }, { 3, 0, 6, {2,0,3,1} },
+        { 3, 1, 7, {0,1,3,2} }, { 3, 3, 5, {1,0,2,3} },
         { 4, 0, 5, {1,0,2,3} }, { 4, 2, 6, {2,1,0,3} },
         { 4, 3, 7, {3,0,1,2} }, { 5, 2, 7, {2,1,0,3} },
         { 6, 1, 7, {0,3,2,1} }
